# sigmod2014-contest-graphblas

./: .gitignore  Dockerfile  Query1.ipynb  Query2.ipynb  Query3.ipynb  Query4.ipynb  README.md  SIGMOD_PC.ipynb  Trainbenchmark.ipynb  data_loader.py  neo4j.md  o1k-queries-cpp.txt  o1k-queries-py.txt
.circleci/: config.yml
cpp/: .gitignore  BaseQuery.h  CMakeLists.txt  Q2_Solution_Batch.h  Query.h  Query1.h  Query2.h  Query3.h  Query4.h  README.md  SmallestElementsContainer.h  ccv-bool.cpp  ccv-bool.h  ccv.c  ccv.cpp  ccv.h  clean-measure.sh  gb_utils.h  generate-relabel-data.cpp  grb-example.cpp  input.h  load.cpp  load.h  main.cpp  measure.sh  paramgen-main.cpp  query-parameters.cpp  query-parameters.h  relabel-common.cpp  relabel-common.h  relabel-concurrent-hash-map.cpp  relabel-concurrent-unordered-map.cpp  relabel-growt.cpp  relabel-libcuckoo.cpp  relabel-main.cpp  relabel-stl.cpp  relabel-unordered-map.cpp  utils.cpp  utils.h
cpp/data-structures/: ancient_grow.h  base_circular.h  base_iterator.h  definitions.h  grow_iterator.h  grow_table.h  markableelement.h  returnelement.h  seqcircular.h  simpleelement.h  tsx_definitions.h
cpp/data-structures/strategy/: estrat_async.h  estrat_sync.h  estrat_sync_alt.h  wstrat_pool.h  wstrat_user.h
cpp/scripts/: rebuild.sh
csvs/: .gitignore  o1k.sha1  p10k.sha1
params/o10k/: query1.csv  query1.txt  query2.csv  query2.txt  query3.csv  query3.txt  query4.csv  query4.txt
params/o1k/: query1.csv  query1.txt  query2.csv  query2.txt  query3.csv  query3.txt  query4.csv  query4.txt
params/p1000k/: query1.csv  query1.txt  query2.csv  query2.txt  query3.csv  query3.txt  query4.csv  query4.txt
params/p100k/: query1.csv  query1.txt  query2.csv  query2.txt  query3.csv  query3.txt  query4.csv  query4.txt
params/p10k/: query1.csv  query1.txt  query2.csv  query2.txt  query3.csv  query3.txt  query4.csv  query4.txt
params/p1k/: query1.csv  query1.txt  query2.csv  query2.txt  query3.csv  query3.txt  query4.csv  query4.txt
preprocess/: .gitignore  convert-csvs.sh  headers.txt  import-to-neo4j.sh
python/: docker-queries-all.sh  main.py  queries-all.py  run_py_with_param.sh
python/algorithms/: search.py
python/loader/: data_loader.py
python/notebooks/: Query1.ipynb  Query2.ipynb  Query3.ipynb  Query4.ipynb  queries-all.ipynb  query1-dev.ipynb  query2-dev.ipynb  query3-dev.ipynb  query4-dev.ipynb
python/queries/: Query1.py  Query2.py  Query3.py  Query4.py  QueryBase.py
python/scripts/: docker-queries-all.sh  docker_all_queries.sh  run_all_queries.sh  run_py_from_file.sh  run_py_with_param.sh  run_with_param.sh
scripts/: run-tool.sh  run.sh
